--- a/.github/workflows/app-deploy.yaml
+++ b/.github/workflows/app-deploy.yaml
@@ -1,4 +1,4 @@
-name: Build and Deploy for Python Streamlit App
+name: Build and Deploy for Python service
 
 on:
   push:
@@ -7,12 +7,11 @@ on:
     branches: [ main ]
 
 env:
-  SERVICE_NAME: streamlit-app
-  NAMESPACE: python-app
-  CLUSTER_NAME: zopdev-demo
-  CLUSTER_PROJECT: festive-canto-445008-j2
-  GAR_PROJECT: festive-canto-445008-j2
-  GAR_REGISTRY: zop-dev
+  APP_NAME: app-serv
+  NAMESPACE: app2
+  CLUSTER_NAME: jun11clus-aks
+  resource_group: Testing-migration
+  AZURE_LOGIN_SERVER: zopdevcc09cb5dc9a.azurecr.io
 
 jobs:
   dockerize:
@@ -23,53 +22,44 @@ jobs:
       image: ${{ steps.output-image.outputs.image }}
     steps:
       - uses: actions/checkout@v4
-      
-      - name: Login to GAR
-        uses: docker/login-action@v2
-        with:
-          registry: us-central1-docker.pkg.dev
-          username: _json_key
-          password: ${{ secrets.STREAMLIT_APP_PYTHON_APP_DEPLOYMENT_KEY }}
 
-      - name: Build and Push Docker Image to GAR
+      - name: Login to ACR
+        uses: azure/docker-login@v1
+        with:
+          login-server: ${{ env.AZURE_LOGIN_SERVER }}
+          username: ${{ secrets.SVC_PRI_USERNAME }}
+          password: ${{ secrets.SVC_PRI_PASSWORD }}
+
+      - name: Build and Push Docker Image to GCR
         uses: docker/build-push-action@v2
         with:
           push: true
           context: .
           file: ./Dockerfile
-          tags:
-            us-central1-docker.pkg.dev/${{ env.GAR_PROJECT }}/${{ env.GAR_REGISTRY }}/${{ env.NAMESPACE }}/${{ env.SERVICE_NAME }}:${{ github.sha }}
-      - id: output-image
-        run: 
-          echo "image=`echo us-central1-docker.pkg.dev/${{ env.GAR_PROJECT }}/${{ env.GAR_REGISTRY }}/${{ env.NAMESPACE }}/${{ env.SERVICE_NAME }}:${{ github.sha }}`" >> "$GITHUB_OUTPUT"
+          tags: ${{ env.AZURE_LOGIN_SERVER }}/${{ env.SERVICE_NAME }}:${{ github.sha }}
 
   deployment:
     runs-on: ubuntu-latest
     needs: dockerize
-    name: 🚀 Deploy
-    env:
-      image: ${{ needs.dockerize.outputs.image }}
-
+    name: Deploy
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v2
-
-      - name: Authorize to GCP service account
-        uses: google-github-actions/auth@v2
+      - name: Azure login
+        id: login
+        uses: azure/login@v1.4.3
         with:
-          credentials_json: ${{ secrets.STREAMLIT_APP_PYTHON_APP_DEPLOYMENT_KEY }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Set up Cloud SDK
-        uses: google-github-actions/setup-gcloud@v2
+      - name: Set AKS context
+        id: set-context
+        uses: azure/aks-set-context@v3
+        with:
+          resource-group: ${{ env.resource_group }}
+          cluster-name: ${{ env.CLUSTER_NAME }}
+          admin: true
 
-      - name: Update Kubectl component
-        run: gcloud --quiet components update kubectl
+      - name: Setup kubectl
+        uses: azure/setup-kubectl@v3 
 
-      - name: Set GCloud Project and Fetch Cluster Credentials
-        run:
-          gcloud container clusters get-credentials ${{ env.CLUSTER_NAME }} --region=us-central1 --project=${{ env.CLUSTER_PROJECT }}
-
-      - name: Update Deployment Image
-        run: 
-          kubectl set image deployment/${{ env.SERVICE_NAME }} ${{ env.SERVICE_NAME }}=${{ env.image }} --namespace ${{ env.NAMESPACE }}
+      - name: Deploy to AKS
+        run: kubectl set image deployment/${{ env.SERVICE_NAME }} ${{ env.SERVICE_NAME }}=${{ env.AZURE_LOGIN_SERVER }}${{ env.SERVICE_NAME }}:${{ github.sha }} --namespace  ${{ env.NAMESPACE }} 
   
