--- a/.github/workflows/app-deploy.yaml
+++ b/.github/workflows/app-deploy.yaml
@@ -30,13 +30,13 @@ jobs:
           username: ${{ secrets.SVC_PRI_USERNAME }}
           password: ${{ secrets.SVC_PRI_PASSWORD }}
 
-      - name: Build and Push Docker Image to GCR
+      - name: Build and Push Docker Image to ACR
         uses: docker/build-push-action@v2
         with:
           push: true
           context: .
           file: ./Dockerfile
-          tags: ${{ env.AZURE_LOGIN_SERVER }}/${{ env.SERVICE_NAME }}:${{ github.sha }}
+          tags: ${{ env.AZURE_LOGIN_SERVER }}/${{ env.APP_NAME }}:${{ github.sha }}
 
   deployment:
     runs-on: ubuntu-latest
@@ -61,5 +61,4 @@ jobs:
         uses: azure/setup-kubectl@v3 
 
       - name: Deploy to AKS
-        run: kubectl set image deployment/${{ env.SERVICE_NAME }} ${{ env.SERVICE_NAME }}=${{ env.AZURE_LOGIN_SERVER }}${{ env.SERVICE_NAME }}:${{ github.sha }} --namespace  ${{ env.NAMESPACE }} 
-  
+        run: kubectl set image deployment/${{ env.APP_NAME }} ${{ env.APP_NAME }}=${{ env.AZURE_LOGIN_SERVER }}/${{ env.APP_NAME }}:${{ github.sha }} --namespace ${{ env.NAMESPACE }}
