--- a/.github/workflows/app-deploy.yaml
+++ b/.github/workflows/app-deploy.yaml
@@ -1,4 +1,4 @@
-name: Build and Deploy for Python service
+name: Build and Deploy
 
 on:
   push:
@@ -7,58 +7,86 @@ on:
     branches: [ main ]
 
 env:
-  APP_NAME: app-serv
-  NAMESPACE: app2
-  CLUSTER_NAME: jun11clus-aks
-  resource_group: Testing-migration
-  AZURE_LOGIN_SERVER: zopdevcc09cb5dc9a.azurecr.io
+  ACCOUNT_ID: 277707114893
+  APP_NAME: sample-app 
+  CLUSTER_NAME: jun14clus
+  ECR_REGISTRY: zop-dev
+  NAMESPACE: tesing-vyom   
+  REGION: us-east-1
 
 jobs:
   dockerize:
     runs-on: ubuntu-latest
     name: 🐳 Dockerize
-
+  
     outputs:
-      image: ${{ steps.output-image.outputs.image }}
+      image: ${{ steps.build-push.outputs.image }}
+
     steps:
       - uses: actions/checkout@v4
-
-      - name: Login to ACR
-        uses: azure/docker-login@v1
+      
+      - uses: actions/setup-go@v4
         with:
-          login-server: ${{ env.AZURE_LOGIN_SERVER }}
-          username: ${{ secrets.SVC_PRI_USERNAME }}
-          password: ${{ secrets.SVC_PRI_PASSWORD }}
+          go-version: '1.21'
+      
+      - name: Get dependencies
+        run: |
+          go mod download
 
-      - name: Build and Push Docker Image to ACR
+      - name: Build
+        run: |
+          CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -buildvcs=false -o main
+      
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
+          aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+          aws-region: ${{ env.REGION }}
+
+      - name: Login to Amazon ECR Private
+        uses: aws-actions/amazon-ecr-login@v1
+
+      - name: Build and Push Docker Image to ECR
         uses: docker/build-push-action@v2
         with:
           push: true
           context: .
           file: ./Dockerfile
-          tags: ${{ env.AZURE_LOGIN_SERVER }}/${{ env.APP_NAME }}:${{ github.sha }}
+          tags: ${{ env.ACCOUNT_ID }}.dkr.ecr.${{ env.REGION }}.amazonaws.com/${{ env.ECR_REGISTRY }}:${{ env.APP_NAME }}-${{ github.sha }}
+
+      - id: output-image
+        run: 
+          echo "image=`echo ${{ env.ACCOUNT_ID }}.dkr.ecr.${{ env.REGION }}.amazonaws.com/${{ env.ECR_REGISTRY }}:${{ env.APP_NAME }}-${{ github.sha }}`" >> "$GITHUB_OUTPUT"    
+
 
   deployment:
     runs-on: ubuntu-latest
     needs: dockerize
-    name: Deploy
+    name: 🚀 Deploy
+    
+    env:
+      image: ${{ needs.dockerize.outputs.image }}
+
     steps:
-      - name: Azure login
-        id: login
-        uses: azure/login@v1.4.3
+      - name: Checkout Code
+        uses: actions/checkout@v2
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
+          aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+          aws-region: ${{ env.REGION }}
 
-      - name: Set AKS context
-        id: set-context
-        uses: azure/aks-set-context@v3
+      - name: Setup Kubectl
+        uses: azure/setup-kubectl@v3
         with:
-          resource-group: ${{ env.resource_group }}
-          cluster-name: ${{ env.CLUSTER_NAME }}
-          admin: true
+          version:  'latest'
 
-      - name: Setup kubectl
-        uses: azure/setup-kubectl@v3 
+      - name: Update AWS Kubectl component
+        run: aws eks update-kubeconfig --region ${{ env.REGION }} --name ${{ env.CLUSTER_NAME }}
 
-      - name: Deploy to AKS
-        run: kubectl set image deployment/${{ env.APP_NAME }} ${{ env.APP_NAME }}=${{ env.AZURE_LOGIN_SERVER }}/${{ env.APP_NAME }}:${{ github.sha }} --namespace ${{ env.NAMESPACE }}
+      - name: Update Deployment Image
+        run: 
+          kubectl set image deployment/${{ env.APP_NAME }} ${{ env.APP_NAME }}="${{ env.ACCOUNT_ID }}.dkr.ecr.${{ env.REGION }}.amazonaws.com/${{ env.ECR_REGISTRY }}:${{ env.APP_NAME }}-${{ github.sha }}" --namespace ${{ env.NAMESPACE }}  
