--- a/.github/workflows/app-deploy.yaml
+++ b/.github/workflows/app-deploy.yaml
@@ -1,4 +1,4 @@
-name: Build and Deploy
+name: Build and Deploy for Python service
 
 on:
   push:
@@ -24,18 +24,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      
-      - uses: actions/setup-go@v4
-        with:
-          go-version: '1.21'
-      
-      - name: Get dependencies
-        run: |
-          go mod download
-
-      - name: Build
-        run: |
-          CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -buildvcs=false -o main
       
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
